# vmtest

./: .gitignore  Cargo.toml  KERNELS  Makefile  README.md
.github/workflows/: images.yml  kernels.yml  release.yml  rust.yml
docs/: architecture.md  config.md  faqs.md  release.md  rootfs.md
examples/: Vmtest.toml  vmtest.toml
scripts/: build_image.sh  build_kernel.sh  build_release.sh
scripts/docker/: Dockerfile.kernel  Dockerfile.release  build_kernel_container.sh  build_release_container.sh  config_kernel.sh
scripts/docker/distros/: archlinux
src/: config.rs  lib.rs  main.rs  output.rs  qemu.rs  qga.rs  ui.rs  util.rs  virtiofsd.rs  vmtest.rs
src/init/: command.template  init.sh  init.sh.template
test/: vmtest.toml
test/fedora/: mkosi.default
tests/: IMAGES  KERNELS  README.md  helpers.rs  main.sh  test.rs  vmtest.toml.allgood  vmtest.toml.notuefi
tests/fixtures/: main.sh  vmtest.toml.allgood  vmtest.toml.notuefi
tests/images/: mkosi.ubuntu22  not-uefi.nix  uefi.nix
tests/kernels/: archlinux  fedora38
