[package]
name = "vmtest"
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
description = "Helps run your tests in virtual machines"
repository = "https://github.com/danobi/vmtest"
readme = "README.md"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
console = "0.15.5"
env_logger = "0.9.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
qapi = { version = "0.10.0", features = ["qmp", "qga"] }
rand = "0.8.5"
regex = "1.7.1"
scopeguard = "1.1.0"
serde = "1.0.147"
serde_derive = "1.0.147"
tempfile = "3.3.0"
toml = "0.5.9"

[dev-dependencies]
test-log = "0.2.11"
