[package]
name = "vmtest"
authors = ["Daniel Xu <dxu@dxuuu.xyz>"]
description = "Helps run your tests in virtual machines"
repository = "https://github.com/danobi/vmtest"
readme = "README.md"
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "string"] }
console = "0.15"
env_logger = "0.10"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
qapi = { version = "0.14", features = ["qmp", "qga"] }
rand = "0.8"
regex = "1.7"
scopeguard = "1.1"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.5"
tinytemplate = "1.2"
toml = "0.5"

[dev-dependencies]
rexpect = "0.5"
rstest = "0.18"
test-log = "0.2"
